2008-11-08 22:39  Vlad Seryakov <seryakov@users.sf.net>

	* Makefile: Added little helper target to compile PHP with 
          embed shared option and install under /usr/local/ns/php 
          for systems where default PHP compiled without ZTS and 
          embed option(Archlinux)

2008-11-08  Stephen Deasey <sdeasey@users.sf.net>

	* Makefile:
	* tests/config.tcl: Enable build against in already installed
	shared library version of php.

2008-11-08 22:39  Vlad Seryakov <seryakov@users.sf.net>

	* nsphp.c, tests/php.test, tests/pages/test.php: Fixed nsphp bug
	  with cunked encoding and headers-only responss triggered by PHP
	  ext function

2008-11-08 05:06  Vlad Seryakov <seryakov@users.sf.net>

	* README: simplified php configure process

2008-11-08 05:01  Vlad Seryakov <seryakov@users.sf.net>

	* Makefile, tests/php.test: simplified php configure process

2008-11-08 03:35  Vlad Seryakov <seryakov@users.sf.net>

	* tests/: all.tcl, config.tcl, php.test, modules/testhttp.tcl,
	  pages/test.php: added tests for nsphp

2008-11-08 03:31  Vlad Seryakov <seryakov@users.sf.net>

	* Makefile: added tests for nsphp

2008-10-30 01:13  Vlad Seryakov <seryakov@users.sf.net>

	* nsphp.c: Fixed bug with PHP exiting but not flushing the headers

2008-10-21 22:46  Vlad Seryakov <seryakov@users.sf.net>

	* nsphp.c: new function, new module tftp, fixed module nsphp

2008-10-05 18:03  Vlad Seryakov <seryakov@users.sf.net>

	* Makefile: OS X does not have O_LARGEFILE

2008-08-08 00:34  Vlad Seryakov <seryakov@users.sf.net>

	* nsphp.c: Fixed header handler function, now add/replaces headers
	  correct;y

2008-07-29 17:51  Vlad Seryakov <seryakov@users.sf.net>

	* nsphp.c: Removed dups in PHP function definition array

2008-07-27 20:21  Vlad Seryakov <seryakov@users.sf.net>

	* README, nsphp.c: php module updates, new pdo driver

2008-07-27 20:18  Vlad Seryakov <seryakov@users.sf.net>

	* README: php module updates, new pdo driver
